force-app/main/default/objects/E_MOC_Timeline__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAM_Level__c</fullName>
        <label>RAM Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>L/N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept Approval</fullName>
                </value>
                <value>
                    <fullName>Budget Registration</fullName>
                </value>
                <value>
                    <fullName>Detailed Design/study</fullName>
                </value>
                <value>
                    <fullName>Hazard Screening</fullName>
                </value>
                <value>
                    <fullName>Technical review</fullName>
                </value>
                <value>
                    <fullName>APU Approval</fullName>
                </value>
                <value>
                    <fullName>VP Approval</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Readiness Review</fullName>
                </value>
                <value>
                    <fullName>Close out</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Risk assessment</fullName>
                </value>
                <value>
                    <fullName>Approval #2</fullName>
                </value>
                <value>
                    <fullName>lesson learn</fullName>
                </value>
                <value>
                    <fullName>Detail Design</fullName>
                </value>
                <value>
                    <fullName>Approval #3 (APU)</fullName>
                </value>
                <value>
                    <fullName>Approval #3 (VP)</fullName>
                </value>
                <value>
                    <fullName>Approval #1</fullName>
                </value>
                <value>
                    <fullName>Return to normal condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept Approval</fullName>
                </value>
                <value>
                    <fullName>Budget Registration</fullName>
                </value>
                <value>
                    <fullName>Detail Design/study</fullName>
                </value>
                <value>
                    <fullName>Risk analysis</fullName>
                </value>
                <value>
                    <fullName>Risk approval</fullName>
                </value>
                <value>
                    <fullName>TA Review</fullName>
                </value>
                <value>
                    <fullName>TA 3 review</fullName>
                </value>
                <value>
                    <fullName>MOC focal review</fullName>
                </value>
                <value>
                    <fullName>APU approve</fullName>
                </value>
                <value>
                    <fullName>VP approve</fullName>
                </value>
                <value>
                    <fullName>Fill in the budget number</fullName>
                </value>
                <value>
                    <fullName>Issue WO to distribute work</fullName>
                </value>
                <value>
                    <fullName>Distribute work to concerned party (Executer)</fullName>
                </value>
                <value>
                    <fullName>Ensure construction complete</fullName>
                </value>
                <value>
                    <fullName>Select category of readiness review checklist</fullName>
                </value>
                <value>
                    <fullName>Perform rediness review checklist</fullName>
                    <label>Perform readiness review checklist</label>
                </value>
                <value>
                    <fullName>Approval checklist</fullName>
                </value>
                <value>
                    <fullName>Budget Estimate Final &amp; Detailed Design/Study</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Fill_in_lesson_learned</fullName>
                    <label>Fill in lesson learned</label>
                </value>
                <value>
                    <fullName>Select MOC Focal Point &amp; Concept Approval-2-APUs-ENMA</fullName>
                </value>
                <value>
                    <fullName>Concept Approval-2-APUs-SCSC</fullName>
                </value>
                <value>
                    <fullName>Concept Approval-3-APUs</fullName>
                </value>
                <value>
                    <fullName>Approve lesson learned</fullName>
                </value>
                <value>
                    <fullName>Select MOC Focal Point &amp; Concept Approval-2-APUs-ENMB</fullName>
                </value>
                <value>
                    <fullName>Approval #1 Engineer</fullName>
                </value>
                <value>
                    <fullName>Approval #1 ASM</fullName>
                </value>
                <value>
                    <fullName>Approval #1 SM or POM</fullName>
                </value>
                <value>
                    <fullName>Approval #2 ASM</fullName>
                </value>
                <value>
                    <fullName>Approval #2 SM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E-MOC Timeline</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Step__c</columns>
        <columns>Change_Type__c</columns>
        <columns>RAM_Level__c</columns>
        <columns>Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TMN-{00000000}</displayFormat>
        <label>E-MOC Timeline No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>